TASK-6: some fixes
